# sopes1ke

API_GO/: .env  Dockerfile  go.mod  go.sum  main.go  round-mark-324101-8bcc42b5d331.json
API_GO/bd/: conexion.go  vars.go
API_GO/src/: controller.go  routes.go  types.go  utils.go
Api_Rust/mysql-test/: Cargo.toml  Dockerfile
Api_Rust/mysql-test/src/: db_layer.rs  main.rs  ws.rs
Api_Rust_Fin/rust-rest-api-master/: .dockerignore  Cargo.toml
Api_Rust_Fin/rust-rest-api-master/src/: main.rs
Api_Rust_Fin/rust-rest-api-master/src/user_router/: mod.rs
Api_Rust_Fin/rust-rest-api-master/src/user_service/: mod.rs
Load_Tester_Locust/Base/: test.py  traffic.json  traffic.py
Rust_api/mysql-test/: Cargo.toml
Rust_api/mysql-test/src/: db_layer.rs  main.rs  mongo.rs  ws.rs
api python/: Dockerfile  Server.py  requirements.txt
load tester python/: LoadTester.py  tweets.json
